<resources>
    <string name="app_name">Procesamiento de imágenes -  Maribel Maisano</string>
    <string name="no_hay_permisos_escritura">No hay permisos suficientes para cargar las imágenes a la memoria externa.</string>
    <string name="hint_obtener_pixel">Toca un punto para conocer el valor del pixel</string>
    <string name="titulo_obtener_pixel">Pixel</string>
    <string name="modificandoPixel">Estás modificando el valor de: x:{valorX} y:{valorY}</string>
    <string name="modificar_color_titulo_dialogo">Modificar color de un pixel</string>
    <string name="recortar">Recortar</string>
    <string name="guardar">Guardar</string>
    <string name="hint_recortar">Selecciona una porción de la imagen</string>
    <string name="selecciona_una_imagen">Selecciona una imagen</string>
    <string name="desdeHasta">Desde: {x},{y} Hasta: {x2},{y2}</string>
    <string name="sinDesdeHasta">Toca un píxel para seleccionar el origen y luego toca otro para seleccionar el destino</string>
    <string name="limpiarValores">Limpiar</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="resultado_operacion">RESULTADO {operacion}</string>
    <string name="resultado_Global">RESULTADO GLOBAL: {umbralGlobal}</string>
    <string name="resultado_Otsu">RESULTADO OTSU: {umbralOtsu}</string>
    <string name="multiplicacion_por_escalar">Multiplicación por un escalar</string>
    <string name="umbralizar">Umbralizar</string>
    <string name="potencia">Potencia</string>
    <string name="min">Min: {min}</string>
    <string name="max">Max: {max}</string>
    <string name="actual">Actual: {actual}</string>
</resources>
