<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_recortar"
            android:padding="16dp"
            android:layout_toLeftOf="@+id/guardar"/>

        <LinearLayout
            android:id="@+id/guardar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:padding="16dp"
            style="@style/selectableItem">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_save"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/desdeHasta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sinDesdeHasta"
            android:padding="16dp"
            android:layout_below="@+id/guardar"/>

        <LinearLayout
            android:id="@+id/limpiar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_toRightOf="@+id/desdeHasta"
            android:layout_alignBottom="@+id/desdeHasta"
            android:padding="16dp"
            style="@style/selectableItem">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_clear"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/limpiarValores"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"/>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <ImageView
                android:id="@+id/imagenOriginal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <ImageView
                android:id="@+id/imagenRecortada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_gravity="center"/>
        </FrameLayout>

    </LinearLayout>
</LinearLayout>