<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nombreImagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ppp.png"
                android:textStyle="bold"
                android:padding="16dp"
                android:layout_marginTop="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <ImageView
                        android:id="@+id/imagen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="32dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1"
                        android:layout_below="@+id/imagen"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/canny_gauss_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <ImageView
                            android:id="@+id/canny_gauss_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <ImageView
                            android:id="@+id/canny_gauss_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layoutImagenUmbralizada"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:visibility="invisible">

                    <ImageView
                        android:id="@+id/imagenUmbralizada"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:layout_marginTop="32dp"
                        android:visibility="invisible"/>

                    <SeekBar
                        android:id="@+id/seleccionUmbralSeekbar"
                        android:layout_marginTop="16dp"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imagenUmbralizada"/>

                    <LinearLayout
                        android:id="@+id/info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_below="@+id/seleccionUmbralSeekbar">

                        <TextView
                            android:id="@+id/minimo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/min"/>

                        <TextView
                            android:id="@+id/maximo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/max"/>

                        <TextView
                            android:id="@+id/actual"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:textStyle="bold"
                            android:text="@string/actual"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/guardar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/info"
                        android:layout_marginTop="16dp"
                        android:visibility="invisible"
                        android:text="GUARDAR."/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="0.5dp"
        android:layout_height="match_parent"
        android:background="@color/grisClaro"/>


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Detección de bordes"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/bordes_canny"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="CANNY"
                android:padding="8dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="11sp"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_boton"/>

            <TextView
                android:id="@+id/bordes_susan"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="SUSAN"
                android:padding="8dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="11sp"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_boton"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gris"
                android:layout_marginTop="16dp"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>